opam-version: "2.0"
name:         "conntest"
maintainer:   "rand00 <oth.rand@gmail.com>"
authors:      "rand00 <oth.rand@gmail.com>"
homepage:     "https://github.com/rand00/conntest"
bug-reports:  "https://github.com/rand00/conntest/issues"
dev-repo:     "git+https://github.com/rand00/conntest.git"
license:      "LGPL"
synopsis:     "A MirageOS unikernel to test networking setup"

build: [ "dune" "build" "-p" name "-j" jobs ]
run-test: [ "dune" "runtest" "-p" name "-j" jobs ]

depends: [
  "ocaml"       {>= "4.13.0"}
  "dune"        {>= "2.8.0"}
  "fmt"         {>= "0.9.0"}
  "logs"        {>= "0.7.0"}
  "ipaddr"
  "uri"
  "tcpip"
  "notty"
  "yojson"
  "ppx_deriving_yojson"
]

pin-depends: [
  [ "notty.dev" "git+https://github.com/rand00/notty.git#414_w_mirage" ]
]
