(library
 (name conntest)
 (public_name conntest)
;; (modules conntest output packet)
 (flags :standard -w -6-27-32-33-39)
 (libraries
  mirage-time
  mirage-runtime
  tcpip
  fmt
  logs
  ipaddr
  uri
  notty
  uuidm
  yojson
  cstruct
  stringext
  ;; decoders-jsonm
  ;; decoders-msgpck
  lwt_react
  )
 (preprocess
  (pps
   ppx_deriving_yojson
   )
  )
 )

